--- a/Web.config
+++ b/Web.config
@@ -11,5 +11,7 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
-
+  <connectionStrings>
+    <add name="mycon" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Git\hotel\App_Data\HotelDB.mdf;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
