--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,6 @@
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
   <connectionStrings>
-    <add name="mycon" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|App_Data\HotelDB.mdf;Integrated Security=True"/>
+    <add name="mycon" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|HotelDB.mdf;Integrated Security=True"/>
   </connectionStrings>
 </configuration>
